--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>The Best Quiz in the World </title>
-  <script src='main.js'></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+<script src='main.js'></script>
 </head>
 <body onload="question()">
   <div>
@@ -13,6 +14,7 @@
 </form>
   </div>
   <div>
+    <button onclick="back()" id="back">back</button>
     <button onclick="onClick()" id="next">next</button>
   </div>
 </body>
